--- a/TasteBuddiesClient/package.json
+++ b/TasteBuddiesClient/package.json
@@ -26,6 +26,8 @@
     "@angular-devkit/build-angular": "^14.2.11",
     "@angular/cli": "~14.2.10",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/google.maps": "^3.54.3",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
